<resources>
    <string name="app_name">電卓アプリ</string>
    <string name="brackets_start">(</string>
    <string name="brackets_end">)</string>
    <string name="percent">%</string>
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="hong">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="root2">&#8730;</string>
    <string name="pi">&#960;</string>
    <string name="factorial">x!</string>
    
</resources>